--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="thirdparty/angular-min.js"></script>
     <script src="thirdparty/angular-route-min.js"></script>
     <script src="thirdparty/angular-resource.min.js"></script>
+    <script src="thirdparty/soundcloud.js"></script>
     <script src="thirdparty/jquery-min.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" href="app.css">
